# DIP2016FALL

./: README.md
dip_hw1/: CMakeLists.txt  README  main.cpp
dip_hw2/: CMakeLists.txt  README  hist.cpp  unsharp.cpp
dip_hw4/: CMakeLists.txt  README  main.cpp
final/: CMakeCache.txt  CMakeLists.txt  README  README.md  face_landmark_detection.cpp  readme.md
